Added legend to the line chart

--- a/style.css
+++ b/style.css
@@ -88,6 +88,16 @@ button {
     cursor: pointer;
 }
 
+.orange-description{
+    color: #D36135;
+    font-weight: bold;
+}
+
+.green-description{
+    color: #4C9079;
+    font-weight: bold;
+}
+
 .oswald-small {
     font-family: "Oswald", sans-serif;
     font-optical-sizing: auto;
