--- a/style.css
+++ b/style.css
@@ -98,6 +98,14 @@ button {
     font-weight: bold;
 }
 
+.oswald-description {
+    font-family: "Oswald", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    text-align: center;
+    margin-top: 10px;
+}
+
 .oswald-small {
     font-family: "Oswald", sans-serif;
     font-optical-sizing: auto;
